# exstruct

./: .bandit  .codacy.yml  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: codeql.yml  gh-pages.yml  pytest.yml  ruff-check.yml
README.en/: index.html
README.ja/: index.html
agents/API_DESIGN/: index.html
agents/ARCHITECTURE/: index.html
agents/CODING_GUIDELINES/: index.html
agents/CONTRIBUTING_FOR_AI/: index.html
agents/DATA_MODEL/: index.html
agents/EXCEL_EXTRACTION/: index.html
agents/FEATURE_SPEC/: index.html
agents/LEGACY_DEPENDENCY_INVENTORY/: index.html
agents/MODEL_MIGRATION_NOTES/: index.html
agents/OVERVIEW/: index.html
agents/RAG_INTEGRATION/: index.html
agents/ROADMAP/: index.html
agents/TASKS/: index.html
agents/TEST_REQUIREMENTS/: index.html
api/: index.html
architecture/pipeline/: index.html
benchmark/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
benchmark/data/: manifest.json  normalization_rules.json
benchmark/data/truth/: ffr_425_01.json  flowchart_01.json  flowchart_02.json  food_inspection_record_01.json  gantt_01.json  tax_report_01.json
benchmark/docs/: spec.md
benchmark/public/: INDEX.md  REPORT.md
benchmark/public/reports/: compare_gpt4o_gpt41.md  results_report.md  rub_report.md  rub_report_gpt41.md  rub_report_gpt4o.md
benchmark/rub/: manifest.json  manifest_lite.json
benchmark/rub/truth/: basic_01.json  basic_form_01.json  certificate_of_employment_01.json  heatstroke_flow_01.json  smartart_01.json  workflow_01.json
benchmark/rub/truth_lite/: basic_01.json  basic_form_01.json  certificate_of_employment_01.json  ffr_425_01.json  flowchart_01.json  flowchart_02.json  food_inspection_record_01.json  gantt_01.json  heatstroke_flow_01.json  smartart_01.json  tax_report_01.json  workflow_01.json
benchmark/scripts/: publicize.ps1  publicize.py  publicize.sh  reproduce.ps1  reproduce.sh
benchmark/src/bench/: cli.py  manifest.py  paths.py  report_public.py
benchmark/src/bench/eval/: markdown_render.py  markdown_score.py  normalization_rules.py  raw_match.py  report.py  score.py
benchmark/src/bench/llm/: openai_client.py  pricing.py
benchmark/src/bench/pipeline/: common.py  exstruct_adapter.py  html_text.py  image_render.py  openpyxl_pandas.py  pdf_text.py
benchmark/src/bench/rub/: __init__.py  manifest.py  normalize.py  score.py
benchmark/src/eval/: exact_match.py  normalize.py
benchmark/src/pipeline/: image_render.py  pdf_text.py
cli/: index.html
com-vs-ooxml-implementation/: index.html
concept/: index.html
contributors/architecture/: index.html
dev-docs/: README.md
dev-docs/adr/: ADR-0001-extraction-mode-boundaries.md  ADR-0002-rich-backend-fallback-policy.md  ADR-0003-output-serialization-omission-policy.md  ADR-0004-patch-backend-selection-policy.md  ADR-0005-path-policy-safety-boundary.md  ADR-0006-public-edit-api-and-host-boundary.md  ADR-0007-editing-cli-as-public-operational-interface.md  ADR-0008-extraction-cli-runtime-capability-validation.md  ADR-0009-single-cli-skill-for-agent-workflows.md  README.md  decision-map.md  index.yaml  template.md
dev-docs/agents/: README.md  adr-criteria.md  adr-governance.md  adr-workflow.md  coding-guidelines.md  contributing.md  overview.md  roadmap.md
dev-docs/architecture/: README.md  contributor-guide.md  overview.md  pipeline.md
dev-docs/specs/: README.md  adr-index.md  adr-review.md  data-model.md  editing-api.md  editing-cli.md  excel-extraction.md  exstruct-cli-skill.md
dev-docs/testing/: README.md  test-requirements.md
docs/: API_DESIGN.md  ARCHITECTURE.md  EXCEL_EXTRACTION.md  FEATURE_SPEC.md  README.en.md  README.ja.md  README.md  api.md  cli.md  com-vs-ooxml-implementation.md  concept.md  index.md  license-guide.md  mcp.md  schemas.md
docs/agents/: API_DESIGN.md  ARCHITECTURE.md  CODING_GUIDELINES.md  CONTRIBUTING_FOR_AI.md  DATA_MODEL.md  EXCEL_EXTRACTION.md  FEATURE_SPEC.md  LEGACY_DEPENDENCY_INVENTORY.md  MODEL_MIGRATION_NOTES.md  OVERVIEW.md  RAG_INTEGRATION.md  ROADMAP.md  TASKS.md  TEST_REQUIREMENTS.md
docs/architecture/: pipeline.md
docs/contributors/: architecture.md
docs/release-notes/: v0.2.60.md  v0.2.61.md  v0.2.70.md  v0.2.71.md  v0.2.80.md  v0.2.90.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.4.0.md  v0.4.4.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.7.1.md  v2.6.0.md
go/: README.md  go.mod  go.sum
license-guide/: index.html
mcp/: index.html
release-notes/v0.2.60/: index.html
release-notes/v0.2.61/: index.html
release-notes/v0.2.70/: index.html
release-notes/v0.2.71/: index.html
sample/: __init__.py  sample-shape-connector.json  sample-shape-connector.md  sample-shape-connector.xlsx  sample.json  sample.md
schemas/: README.md  arrow.json  cell_row.json  chart.json  chart_series.json  index.html  merged_cells.json  print_area.json  print_area_view.json  shape.json  sheet.json  smartart.json  smartart_node.json  workbook.json
scripts/: codacy_issues.py  gen_json_schema.py  gen_model_docs.py
search/: search_index.json
tasks/: capture_sheet_images_eval.md  feature_spec.md  lessons.md  todo.md
tests/: conftest.py  test_auto_page_breaks.py  test_backends.py  test_cells_and_tables.py  test_cells_utils.py  test_charts_extraction.py  test_cli.py  test_colors_map.py  test_conftest_libreoffice_runtime.py  test_constraints.py  test_engine.py  test_error_handling.py  test_error_handling_exceptions.py  test_export_requirements.py  test_integrate_fallback.py  test_integrate_raw_data.py  test_io_common.py  test_mode_output.py  test_modeling.py  test_models_export.py  test_models_validation.py  test_ooxml_parser.py  test_pipeline.py  test_print_area_views.py  test_render_smoke.py  test_schemas_generated.py  test_shapes_extraction.py  utils.py
(+256 files in other folders)
