[project]
name = "exstruct"
version = "0.2.90"
description = "Excel to structured JSON (tables, shapes, charts) for LLM/RAG pipelines"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["excel", "structure", "data", "exstruct"]
authors = [
    { name = "harumiWeb"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scipy>=1.16.3",
    "xlwings>=0.33.16",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=2.0.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "taskipy>=1.14.1",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0.3"]
toon = ["python-toon>=0.1.3"]
render = ["pypdfium2>=5.1.0", "Pillow>=12.0.0"]

[project.scripts]
exstruct = "exstruct.cli.main:main"

[project.urls]
Homepage = "https://harumiweb.github.io/exstruct/"
Repository = "https://github.com/harumiWeb/exstruct"
Issues = "https://github.com/harumiWeb/exstruct/issues"
Documentation = "https://harumiweb.github.io/exstruct/"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/gen_py/*",
]

[tool.ruff]
target-version = "py311"
src = ["exstruct"]

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "N",   # naming
    "C90", # complexity
    "A",   # flake8-builtins
    "ANN", # type annotations
]

ignore = [
    "E501",   # 行長は許容（Excel JSON は長くなりがち）
    "B008",   # Pydantic の default_factory を誤検知するため
    "ANN101", # self に型を要求されてしまうため
    "ANN102", # cls も同様
]

fix = true

# 型ヒントのスタイル
[tool.ruff.lint]
extend-select = ["ANN"]

# import の並び替え設定
[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["exstruct"]
force-sort-within-sections = true

# 複雑度チェック（関数の最大複雑度）
[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]


[tool.mypy]
packages = ["exstruct"]
python_version = "3.11"

# 外部ライブラリは一切チェックしない
ignore_missing_imports = true

# 自作コードは厳密にチェックする
strict = true

# Pydantic v2 向け
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
markers = [
    "com: requires Excel COM (Windows + Excel)",
    "render: requires Excel COM and pypdfium2; set RUN_RENDER_SMOKE=1 to enable",
]

[tool.taskipy.tasks]
ruff = "ruff check ."
ruff-fix = "ruff check . --fix"
mypy = "mypy src/exstruct --strict"
test = "pytest -vv --cov"
docs = "mkdocs serve"
build-docs = "mkdocs build && python scripts/gen_json_schema.py && python scripts/gen_model_docs.py"
